tests/trybuild/secret_value_traits.stderr
error[E0277]: `SecretValue` doesn't implement `Debug`
 --> tests/trybuild/secret_value_traits.rs:5:22
  |
5 |     let _ = format!("{secret:?}");
  |                      ^^^^^^^^^^ `SecretValue` cannot be formatted using `{:?}` because it doesn't implement `Debug`
  |
  = help: the trait `Debug` is not implemented for `SecretValue`
  = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)
